--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="render">
                 <h3 class="render__title">Mass (Kilograms/Pounds)</h3>
-                <p class="render__text"><span class="unit">0</span> kilograms = <span id="pounds">0</span> pounds | <span class="unit">0</span> pounds = <span id="kilograms">0</span> kilos</p>
+                <p class="render__text"><span class="unit">0</span> kilograms = <span id="pounds">0</span> pounds | <span class="unit">0</span> pounds = <span id="kilograms">0</span> kilograms</p>
             </div>
         </div>
     </section>
